# conductor

./: .gitignore  Cargo.toml  Makefile  README.md  deny.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
docs/: api.md  architecture.md  development.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx  types.ts
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/: AgentCard.test.tsx  AgentCard.tsx  AgentDetail.tsx  CommandPalette.tsx  CostDashboard.tsx  FleetView.tsx  GoalSpaceView.tsx  NudgeDialog.test.tsx  NudgeDialog.tsx  QuickTask.tsx  ToastProvider.tsx
frontend/src/components/agent/: CommitEvent.tsx  ErrorEvent.tsx  EventRenderer.tsx  TextEvent.tsx  ToolCallEvent.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatMessage.tsx  ChatView.tsx  TaskProposal.tsx
frontend/src/components/layout/: ProjectSidebar.tsx  Sidebar.tsx  SidebarLayout.tsx
frontend/src/components/settings/: ProjectSettings.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  dialog.tsx  input.tsx  select.tsx  textarea.tsx  tooltip.tsx
frontend/src/hooks/: useAgentEvents.test.ts  useAgentEvents.ts  useKeyboardShortcuts.ts
src/: cli.rs  lib.rs  main.rs
src/agent/: event_parser.rs  mod.rs  session.rs  worktree.rs
src/db/: mod.rs  queries.rs  schema.rs
src/goal/: chat.rs  decompose.rs  mod.rs  space.rs  task.rs
src/hooks/: handler.rs  mod.rs
src/server/: mod.rs  routes.rs  sse.rs
tests/: api_integration.rs
