[package]
name = "conductor"
version = "0.1.5"
edition = "2021"
rust-version = "1.83"
license = "MIT"
description = "Local-first orchestration system for managing multiple Claude Code agents"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"
open = "5"
futures = "0.3"
dirs = "6.0.0"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
